outer join, impossible on condition, where, and usable key for range bug#926